bodhilibrs_frompyo3/tests/ui/error-unsupported-struct-attr-format-2.stderr
error: expected `=`
 --> tests/ui/error-unsupported-struct-attr-format-2.rs:4:17
  |
4 | #[frompyo3(name Resource)]
  |                 ^^^^^^^^
