bodhilibrs_frompyo3/tests/ui/error-unsupported-struct-attr-format-2.rs
use frompyo3::FromPyO3;

#[derive(FromPyO3)]
#[frompyo3(name Resource)]
struct TestUnsupportedStructAttr {}

fn main() {}
